[gd_scene load_steps=3 format=3 uid="uid://cot01r3ewsbo4"]

[ext_resource type="Script" path="res://addons/goventure/inventory.gd" id="1_3x8gl"]
[ext_resource type="PackedScene" uid="uid://ca1x6xh8sd0mr" path="res://addons/goventure/inventory_button.tscn" id="2_1o4c6"]

[node name="InventoryTest" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3x8gl")
button = ExtResource("2_1o4c6")
resource_dir = "res://addons/goventure/resources"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 394.0
offset_right = 1150.0
offset_bottom = 644.0
color = Color(0.52549, 0.52549, 0.52549, 1)

[node name="Item1Buttons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 354.0
offset_top = 395.0
offset_right = 647.0
offset_bottom = 642.0

[node name="ActionButtons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 671.0
offset_top = 395.0
offset_right = 818.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2

[node name="Item2Buttons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 850.0
offset_top = 396.0
offset_right = 1143.0
offset_bottom = 643.0

[node name="ActionLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 9.0
offset_top = 402.0
offset_right = 348.0
offset_bottom = 443.0

[node name="RunButton" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 560.0
offset_right = 205.0
offset_bottom = 618.0
text = "Run"

[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
